--- a/IETTKart/IETTKart/IETTKart.csproj
+++ b/IETTKart/IETTKart/IETTKart.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NFCForms" Version="2.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
   </ItemGroup>
 
